# SliceGNN

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  base_benchmark.py  cal_similarity.py  demo.py  grepdta.py  microbatch_reddit_quiver_queue.py  multi_gpu_test.sh  pyproject.toml  sendrecv.py  setup.py  small_test.py  test.sh  test_getmicrobatch.py  test_nccl.py  test_sendrecv.py  training_benchmark.py
benchmark/: gas_gat.py  gas_microbatch_benchmark.py  gas_microbatchbenchmark.py  grepdta.py  loadermicrobatch.py  loadervanilla.py  mag.py  memory_benchmark.py  microbatch_reddit_quiver_queue.py  microbatchbenchmark.py  microbatchqueue.py  nanoloadbalance.py  paper100m.py  paper100mneisampler.py  quiver_benchmark.py  script.sh  time_measure.py
conf/: config.yaml
dockerfiles/: Dockerfile
microGNN/: __init__.py  history.py  prune.py
pyg/: __init__.py  epochtimetest.py  graphsampler.py  multigpu.py  smallgraph.py  smallgraphsampler.py  takeadjs.py
quiver/: dist_sampling_reddit_quiver.py  get_micro_batch.py  microbatch__quiver_base.py  microbatch_reddit_quiver.py  microbatch_reddit_quiver_base.py  microbatch_reddit_quiver_nccl.py  microbatch_reddit_quiver_send.py  minibatch_reddit_quiver.py  minibatch_reddit_quiver_loader.py  minibatch_reddit_quiver_origin.py  reddit_quiver.py  smallcase_reddit_quiver_send.py
sampler/: __init__.py  get_micro_batch.py  gpu1_microbatch.py  gpu1_minibatch.py  loader_reddit_pyg.py  multigpu_microbatch.py  multigpu_microbatch_base.py  multigpu_minibatch.py  profiling_NeighborSampler_minibatch.py  sampler_old_reddit_pyg.py  (+1 more)
(+50 files in other folders)
